general/platform-components/helm/kyverno-policies/tests/traefik/resources/tlsoptions.yaml
---
apiVersion: traefik.io/v1alpha1
kind: TLSOption
metadata:
  name: default
  namespace: traefik
spec:
  minVersion: VersionTLS12
---
apiVersion: traefik.io/v1alpha1
kind: TLSOption
metadata:
  name: custom-options
  namespace: traefik
spec:
  minVersion: VersionTLS13
