general/platform-components/helm/kyverno-policies/tests/traefik/non-admin/kyverno-test.yaml
---
apiVersion: cli.kyverno.io/v1alpha1
kind: Test
metadata:
  name: traefik-non-admin
policies:
  - /tmp/kyverno-traefik.yaml
resources:
  - ../resources/tlsoptions.yaml
userinfo: user_info.yaml
results:
  # default case
  - policy: disallow-default-tlsoptions
    resources:
      - default
    kind: TLSOption
    result: fail

  # fail does not work here as the test is always green
  # needs to be set to skip
  - policy: disallow-default-tlsoptions
    resources:
      - custom-options
    kind: TLSOption
    result: skip
