general/platform-components/helm/kyverno-policies/tests/traefik/non-admin/user_info.yaml
---
apiVersion: cli.kyverno.io/v1alpha1
kind: UserInfo
metadata:
  name: user-info
clusterRoles:
  - view
userInfo:
  username: dev@example.com
